--- a/assets/css/404.css
+++ b/assets/css/404.css
@@ -1,126 +1,147 @@
-</style>
-@import 'https://fonts.googleapis.com/css?family=Inconsolata';
-
-html {
-  min-height: 100%;
-}
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,700);
 
 body {
-  box-sizing: border-box;
-  height: 100%;
-  background-color: #000000;
-  background-image: radial-gradient(#11581E, #041607), url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
-  background-repeat: no-repeat;
-  background-size: cover;
-  font-family: 'Inconsolata', Helvetica, sans-serif;
-  font-size: 1.5rem;
-  color: rgba(128, 255, 128, 0.8);
-  text-shadow:
-      0 0 1ex rgba(51, 255, 51, 1),
-      0 0 2px rgba(255, 255, 255, 0.8);
+  width:100%;
+  height:100%;
+  background:#48A9E6;
+  font-family: 'Raleway', sans-serif;
+  font-weight:300;
+  margin:0;
+  padding:0;
 }
 
-.noise {
-  pointer-events: none;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-image: url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: -1;
-  opacity: .02;
+#title {
+  text-align:center;
+  font-size:40px;
+  margin-top:40px;
+  margin-bottom:-40px;
+  position:relative;
+  color:#fff;
 }
 
-.overlay {
-  pointer-events: none;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background:
-      repeating-linear-gradient(
-      180deg,
-      rgba(0, 0, 0, 0) 0,
-      rgba(0, 0, 0, 0.3) 50%,
-      rgba(0, 0, 0, 0) 100%);
-  background-size: auto 4px;
-  z-index: 1;
+.circles:after {
+  content:'';
+  display:inline-block;
+  width:100%;
+  height:100px;
+  background:#fff;
+  position:absolute;
+  top:-50px;
+  left:0;
+  transform:skewY(-4deg);
+  -webkit-transform:skewY(-4deg);
 }
 
-.overlay::before {
-  content: "";
-  pointer-events: none;
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(
-      0deg,
-      transparent 0%,
-      rgba(32, 128, 32, 0.2) 2%,
-      rgba(32, 128, 32, 0.8) 3%,
-      rgba(32, 128, 32, 0.2) 3%,
-      transparent 100%);
-  background-repeat: no-repeat;
-  animation: scan 7.5s linear 0s infinite;
+.circles { 
+	background:#fff;
+	text-align: center;
+	position: relative;
+  margin-top:-60px;
+  box-shadow:inset -1px -4px 4px rgba(0,0,0,0.2);
 }
 
-@keyframes scan {
-  0%        { background-position: 0 -100vh; }
-  35%, 100% { background-position: 0 100vh; }
+.circles p {
+	font-size: 240px;
+	color: #fff;
+	padding-top: 60px;
+	position: relative;
+  z-index: 9;
+  line-height: 100%;
 }
 
-.terminal {
-  box-sizing: inherit;
-  position: absolute;
-  height: 100%;
-  width: 1000px;
-  max-width: 100%;
-  padding: 4rem;
-  text-transform: uppercase;
+.circles p small { 
+  font-size: 40px; 
+  line-height: 100%; 
+  vertical-align: top;   
 }
 
-.output {
-  color: rgba(128, 255, 128, 0.8);
-  text-shadow:
-      0 0 1px rgba(51, 255, 51, 0.4),
-      0 0 2px rgba(255, 255, 255, 0.8);
+.circles .circle.small {
+	width: 140px;
+	height: 140px;
+	border-radius: 50%;
+	background: #48A9E6;
+	position: absolute;
+	z-index: 1;
+	top: 80px;
+	left: 50%;
+	animation: 7s smallmove infinite cubic-bezier(1,.22,.71,.98);	
+	-webkit-animation: 7s smallmove infinite cubic-bezier(1,.22,.71,.98);
+	animation-delay: 1.2s;
+	-webkit-animation-delay: 1.2s;
 }
 
-.output::before {
-  content: "> ";
+.circles .circle.med {
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	background: #48A9E6;
+	position: absolute;
+	z-index: 1;
+	top: 0;
+	left: 10%;
+	animation: 7s medmove infinite cubic-bezier(.32,.04,.15,.75);	
+	-webkit-animation: 7s medmove infinite cubic-bezier(.32,.04,.15,.75);
+	animation-delay: 0.4s;
+	-webkit-animation-delay: 0.4s;
 }
 
-/*
-.input {
-  color: rgba(192, 255, 192, 0.8);
-  text-shadow:
-      0 0 1px rgba(51, 255, 51, 0.4),
-      0 0 2px rgba(255, 255, 255, 0.8);
+.circles .circle.big {
+	width: 400px;
+	height: 400px;
+	border-radius: 50%;
+	background: #48A9E6;
+	position: absolute;
+	z-index: 1;
+	top: 200px;
+	right: 0;
+	animation: 8s bigmove infinite;	
+	-webkit-animation: 8s bigmove infinite;
+	animation-delay: 3s;
+	-webkit-animation-delay: 1s;
 }
 
-.input::before {
-  content: "$ ";
+@-webkit-keyframes smallmove {
+	0% { top: 10px; left: 45%; opacity: 1; }
+	25% { top: 300px; left: 40%; opacity:0.7; }
+	50% { top: 240px; left: 55%; opacity:0.4; }
+	75% { top: 100px; left: 40%;  opacity:0.6; }
+	100% { top: 10px; left: 45%; opacity: 1; }
 }
-*/
-
-a {
-  color: #fff;
-  text-decoration: none;
-}
-
-a::before {
-  content: "[";
-}
-
-a::after {
-  content: "]";
+@keyframes smallmove {
+	0% { top: 10px; left: 45%; opacity: 1; }
+	25% { top: 300px; left: 40%; opacity:0.7; }
+	50% { top: 240px; left: 55%; opacity:0.4; }
+	75% { top: 100px; left: 40%;  opacity:0.6; }
+	100% { top: 10px; left: 45%; opacity: 1; }
 }
 
-.errorcode {
-  color: white;
+@-webkit-keyframes medmove {
+	0% { top: 0px; left: 20%; opacity: 1; }
+	25% { top: 300px; left: 80%; opacity:0.7; }
+	50% { top: 240px; left: 55%; opacity:0.4; }
+	75% { top: 100px; left: 40%;  opacity:0.6; }
+	100% { top: 0px; left: 20%; opacity: 1; }
+}
+
+@keyframes medmove {
+	0% { top: 0px; left: 20%; opacity: 1; }
+	25% { top: 300px; left: 80%; opacity:0.7; }
+	50% { top: 240px; left: 55%; opacity:0.4; }
+	75% { top: 100px; left: 40%;  opacity:0.6; }
+	100% { top: 0px; left: 20%; opacity: 1; }
+}
+
+@-webkit-keyframes bigmove {
+	0% { top: 0px; right: 4%; opacity: 0.5; }
+	25% { top: 100px; right: 40%; opacity:0.4; }
+	50% { top: 240px; right: 45%; opacity:0.8; }
+	75% { top: 100px; right: 35%;  opacity:0.6; }
+	100% { top: 0px; right: 4%; opacity: 0.5; }
+}
+@keyframes bigmove {
+	0% { top: 0px; right: 4%; opacity: 0.5; }
+	25% { top: 100px; right: 40%; opacity:0.4; }
+	50% { top: 240px; right: 45%; opacity:0.8; }
+	75% { top: 100px; right: 35%;  opacity:0.6; }
+	100% { top: 0px; right: 4%; opacity: 0.5; }
 }
