--- a/web/portal/templates/ifastnet-child/css/custom.css
+++ b/web/portal/templates/ifastnet-child/css/custom.css
@@ -67,7 +67,7 @@ div.header-lined h1 {
 }
 section.section-wrap.services .row.hidden-xs .text-center > a.btn.btn-primary {
     border-radius: 0;
-    background: #F67C0A;
+    background: #5328ff;
     border: 1px solid #A75101;
     border-bottom: 2px solid #A75101;
     color: #fff;
