--- a/web/portal/templates/ifastnet-child/assets/css/style.css
+++ b/web/portal/templates/ifastnet-child/assets/css/style.css
@@ -601,7 +601,7 @@ body > p:last-child {
     font-size: 12px;
     position: fixed;
     bottom: -40px;
-    right: 20px;
+    left: 20px;
     -webkit-transition: all 1s ease;
     -moz-transition: all 1s ease;
     -o-transition: all 1s ease;
